Update gradle. Correct change from Int to String on News.id Launch test on assembleRelease. Remove old gitlab-ci. Code cleanup update README

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,7 +18,7 @@
 
     <!-- ____________________ News List ____________________ -->
     <string name="sign_in">Se connecter</string>
-    <string name="news_list_title">News List</string>
+    <string name="news_list_title">Liste d\'article</string>
 
     <!-- ____________________ News Detail ____________________ -->
     <string name="from_author">de %1$s</string>
