--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,7 +6,7 @@
         _ NewsDetail
      -->
 
-    <!-- ____________________ App Related ____________________ -->
+    <!-- ____________________ AppRelated ____________________ -->
     <string name="short_name_host">NewsReader</string>
     <string name="app_name">NewsReader</string>
 
@@ -16,14 +16,13 @@
     <string name="basic_error">Une erreur est survenue, veuillez réessayer plus tard</string>
 
 
-    <!-- ____________________ News List ____________________ -->
-    <string name="sign_in">Se connecter</string>
+    <!-- ____________________ NewsList ____________________ -->
     <string name="news_list_title">Liste d\'article</string>
 
-    <!-- ____________________ News Detail ____________________ -->
+    <!-- ____________________ NewsDetail ____________________ -->
+    <string name="button_show_article">Ouvrir dans le navigateur</string>
+    <string name="news_title">"Détail de l'article "</string>
     <string name="from_author">de %1$s</string>
-    <string name="button_show_article">Continuer sur l\'article</string>
-    <string name="news_title">Détail de l\'article</string>
 
 
 </resources>
