--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,26 +6,22 @@
         _ NewsDetail
      -->
 
-
     <!-- ____________________ AppRelated ____________________ -->
     <string name="short_name_host">NewsReader</string>
     <string name="app_name">NewsReader</string>
 
 
-
     <!-- ____________________ General ____________________ -->
     <string name="close_button">⬅️</string>
-    <string name="basic_error">Une erreur est survenue, veuillez réessayer plus tard</string>
+    <string name="basic_error">An error has occurred, please try again later</string>
 
 
     <!-- ____________________ NewsList ____________________ -->
-    <string name="sign_in">Sign in</string>
     <string name="news_list_title">News List</string>
 
-
     <!-- ____________________ NewsDetail ____________________ -->
-    <string name="button_show_article">Continuer sur l\'article</string>
-    <string name="news_title">"Détail de l'article "</string>
+    <string name="button_show_article">Open in Browser</string>
+    <string name="news_title">"Detail of article "</string>
     <string name="from_author">from %1$s</string>
 
 </resources>
